--- a/app/globals.css
+++ b/app/globals.css
@@ -4,16 +4,17 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
   --color-text-main: #333;
   --color-text-sub: #999;
-  --color-text-umpainted: #fff;
+  --color-text-unpainted: #fff;
   --color-text-error: #f33;
   --color-bg-main: #fff;
   --color-bg-sub: #f3f3f3;
   --color-bg-code: #fafafa;
-  --color-bf-painted: #333;
+  --color-bg-painted: #333;
   --color-border-dark: #333;
   --color-border: #ddd;
   --color-border-light: #f3f3f3;
   --color-current: #eee;
+  --color-thema: rgba(20, 120, 88, 0.75);
   --color-button-primary: #333;
   --border-radius: 4px;
 }
